# HMM_Market_Analysis

./: .gitignore  README.md  pyproject.toml
results/: MODEL_METRICS.md  optimized_hmm_classification_model.pt  structured_emission_model_results.json
results/visualizations/: regime_transition_analysis_summary.md
src/data/: __init__.py  data_processor.py  feature_engineering.py
src/models/: __init__.py  base_hmm.py  discrete_hmm.py  hmm_model.py  hyperparameter_test.py  regime_analysis.py  trainer.py  utils.py
src/training/: train.py
web_app/: app.py  dashboard_data.json  prepare_data.py
